# Fastmail-Sieve-Sync

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
sieve_sync/: sieve.py  sieve_sync.py  tiny_jmap_library.py
